kubernetes-Templates/Network/restrict_pods_based_on_ip_address.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-specific-ips
spec:
  podSelector: {} # This selects all pods
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.1.0/24 # Allowed IP CIDR range
        except:
        - 192.168.1.10/32    # Exception (optional)
